complex sim just about to work

--- a/notebooks/2_variant_simulation.ipynb
+++ b/notebooks/2_variant_simulation.ipynb
@@ -24,8 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_dir_notebook=\"/home/jrich/data/varseek_data_fresh/vk_sim_2024nov24_500000mcrs_k59_nov16\" #!!! change for each run\n",
-    "number_of_mutations_to_sample = 500000\n",
+    "out_dir_notebook=\"/home/jrich/data/varseek_data_fresh/vk_sim_2024nov24_complex_testing_3\" #!!! change for each run\n",
+    "number_of_mutations_to_sample = 200\n",
     "# Paths\n",
     "mutation_metadata_df = \"/home/jrich/data/varseek_data_fresh/vk_build_pipeline_grch37_nov16/mutation_metadata_df_updated_vk_info_exploded.csv\"\n",
     "mutation_index = \"/home/jrich/data/varseek_data_fresh/vk_build_pipeline_grch37_nov16/mutation_reference.idx\"\n",
@@ -144,23 +144,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import importlib\n",
+    "# import sys\n",
+    "# import importlib\n",
     "\n",
-    "# Remove the module from sys.modules\n",
-    "if 'varseek.sim' in sys.modules:\n",
-    "    del sys.modules['varseek.sim']\n",
+    "# # Remove the module from sys.modules\n",
+    "# if 'varseek.sim' in sys.modules:\n",
+    "#     del sys.modules['varseek.sim']\n",
     "\n",
-    "# Import the module and reload it\n",
-    "import varseek.varseek_sim\n",
-    "importlib.reload(varseek.varseek_sim)\n",
-    "import varseek as vk\n",
+    "# # Import the module and reload it\n",
+    "# import varseek.varseek_sim\n",
+    "# importlib.reload(varseek.varseek_sim)\n",
+    "# import varseek as vk\n",
     "\n",
-    "# instead of using vk.sim() as before, I must explicitely use vk.varseek_sim.sim()"
+    "# # instead of using vk.sim() as before, I must explicitely use vk.varseek_sim.sim()"
    ]
   },
   {
@@ -169,43 +169,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!!! TEMP\n",
-    "sample_type = \"all\"\n",
-    "conditions = ['dlist-equal=none', 'mcrs_is_substring-isnottrue', 'pseudoaligned_to_human_reference_despite_not_truly_aligning-isnottrue']  # kmer_overlap_in_mcrs_reference-isnottrue\n",
+    "# #!!! TEMP\n",
+    "# sample_type = \"all\"\n",
+    "# conditions = ['dlist-equal=none', 'mcrs_is_substring-isnottrue', 'pseudoaligned_to_human_reference_despite_not_truly_aligning-isnottrue']  # kmer_overlap_in_mcrs_reference-isnottrue\n",
     "\n",
     "\n",
-    "if not os.path.exists(mutation_metadata_df_out) or not os.path.exists(read_df_out):\n",
-    "    simulated_df_dict = vk.varseek_sim.sim(\n",
-    "        mutation_metadata_df = mutation_metadata_df,\n",
-    "        fastq_output_path = synthetic_reads_fastQ,\n",
-    "        sample_type=sample_type,\n",
-    "        number_of_mutations_to_sample=number_of_mutations_to_sample,\n",
-    "        strand=strand,\n",
-    "        number_of_reads_per_sample=\"all\",  # not used when number_of_reads_per_sample_m and number_of_reads_per_sample_w are provided\n",
-    "        k=k,  # used in vk build with the respective index\n",
-    "        w=w,  # used in vk build with the respective index\n",
-    "        read_length=read_length,\n",
-    "        seed=seed,\n",
-    "        add_noise=add_noise,\n",
-    "        error_rate=error_rate,\n",
-    "        error_distribution=error_distribution,\n",
-    "        max_errors=max_errors,\n",
-    "        with_replacement=False,\n",
-    "        sequences=sequences,\n",
-    "        mutation_metadata_df_path=mutation_metadata_df_path,\n",
-    "        seq_id_column=seq_id_column,\n",
-    "        mut_column=mut_column,\n",
-    "        reference_out_dir=reference_out_dir,\n",
-    "        out_dir_vk_build=out_dir_vk_build,\n",
-    "        filters=conditions,\n",
-    "        read_df_out=read_df_out,\n",
-    "        mutation_metadata_df_out=mutation_metadata_df_out,\n",
-    "    )\n",
+    "# if not os.path.exists(mutation_metadata_df_out) or not os.path.exists(read_df_out):\n",
+    "#     simulated_df_dict = vk.varseek_sim.sim(\n",
+    "#         mutation_metadata_df = mutation_metadata_df,\n",
+    "#         fastq_output_path = synthetic_reads_fastQ,\n",
+    "#         sample_type=sample_type,\n",
+    "#         number_of_mutations_to_sample=number_of_mutations_to_sample,\n",
+    "#         strand=strand,\n",
+    "#         number_of_reads_per_sample=\"all\",  # not used when number_of_reads_per_sample_m and number_of_reads_per_sample_w are provided\n",
+    "#         k=k,  # used in vk build with the respective index\n",
+    "#         w=w,  # used in vk build with the respective index\n",
+    "#         read_length=read_length,\n",
+    "#         seed=seed,\n",
+    "#         add_noise=add_noise,\n",
+    "#         error_rate=error_rate,\n",
+    "#         error_distribution=error_distribution,\n",
+    "#         max_errors=max_errors,\n",
+    "#         with_replacement=False,\n",
+    "#         sequences=sequences,\n",
+    "#         mutation_metadata_df_path=mutation_metadata_df_path,\n",
+    "#         seq_id_column=seq_id_column,\n",
+    "#         mut_column=mut_column,\n",
+    "#         reference_out_dir=reference_out_dir,\n",
+    "#         out_dir_vk_build=out_dir_vk_build,\n",
+    "#         filters=conditions,\n",
+    "#         read_df_out=read_df_out,\n",
+    "#         mutation_metadata_df_out=mutation_metadata_df_out,\n",
+    "#     )\n",
     "\n",
-    "    read_df, mutation_metadata_df = simulated_df_dict[\"read_df\"], simulated_df_dict[\"mutation_metadata_df\"]\n",
-    "else:\n",
-    "    read_df = pd.read_csv(read_df_out)\n",
-    "    mutation_metadata_df = pd.read_csv(mutation_metadata_df_out)"
+    "#     read_df, mutation_metadata_df = simulated_df_dict[\"read_df\"], simulated_df_dict[\"mutation_metadata_df\"]\n",
+    "# else:\n",
+    "#     read_df = pd.read_csv(read_df_out)\n",
+    "#     mutation_metadata_df = pd.read_csv(mutation_metadata_df_out)"
    ]
   },
   {
@@ -221,51 +221,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# m_list = [1, 2, 3, 4, 5, 6, 7, 8, 16, 32, 64, 128, 256, 512]\n",
-    "# w_list = [0, 1, 2, 3, 4, 5, 6, 7, 8, 16, 32, 64, 128, 256, 512]\n",
-    "# conditions = ['mutation_type-equal=substitution', 'mutation_type-notequal=substitution', 'dlist-equal=none', 'dlist-notequal=none', 'kmer_overlap_in_mcrs_reference-isfalse', 'kmer_overlap_in_mcrs_reference-istrue', 'is_near_splice_junction_10-isfalse', 'is_near_splice_junction_10-istrue']\n",
+    "m_list = [1, 2, 3, 4, 5, 6, 7, 8, 16, 32, 64, 128, 256]\n",
+    "w_list = [0, 1, 2, 3, 4, 5, 6, 7, 8, 16, 32, 64, 128, 256]\n",
+    "conditions = ['mutation_type-equal=substitution', 'mutation_type-notequal=substitution', 'dlist-equal=none', 'dlist-notequal=none', 'kmer_overlap_in_mcrs_reference-isfalse', 'kmer_overlap_in_mcrs_reference-istrue', 'is_near_splice_junction_10-isfalse', 'is_near_splice_junction_10-istrue']\n",
     "\n",
-    "# random.shuffle(m_list)\n",
-    "# random.shuffle(w_list)\n",
+    "random.shuffle(m_list)\n",
+    "random.shuffle(w_list)\n",
     "\n",
-    "# if not os.path.exists(mutation_metadata_df_out) and not os.path.exists(read_df_out):\n",
-    "#     for m in m_list:\n",
-    "#         for w in w_list:\n",
-    "#             for condition in conditions:\n",
-    "#                 read_fq_path_specific = synthetic_reads_fastQ.replace(\".fq\", f\"_m{m}_w{w}_{condition.replace('=', '_')}.fq\")\n",
-    "#                 condition_added_list = [condition, 'included_in_synthetic_reads-isnottrue']\n",
+    "if not os.path.exists(mutation_metadata_df_out) and not os.path.exists(read_df_out):\n",
+    "    for m in m_list:\n",
+    "        for w in w_list:\n",
+    "            for condition in conditions:\n",
+    "                read_fq_path_specific = synthetic_reads_fastQ.replace(\".fq\", f\"_m{m}_w{w}_{condition.replace('=', '_')}.fq\")\n",
+    "                condition_added_list = [condition, 'included_in_synthetic_reads-isnottrue']\n",
     "                \n",
-    "#                 simulated_df_dict = vk.sim(\n",
-    "#                     mutation_metadata_df = mutation_metadata_df,\n",
-    "#                     fastq_output_path = read_fq_path_specific,\n",
-    "#                     fastq_parent_path = synthetic_reads_fastQ,\n",
-    "#                     read_df_parent=read_df,\n",
-    "#                     sample_type=\"all\",\n",
-    "#                     number_of_mutations_to_sample=number_of_mutations_to_sample,\n",
-    "#                     strand=strand,\n",
-    "#                     number_of_reads_per_sample=None,  # not used when number_of_reads_per_sample_m and number_of_reads_per_sample_w are provided\n",
-    "#                     number_of_reads_per_sample_m=m,\n",
-    "#                     number_of_reads_per_sample_w=w,\n",
-    "#                     read_length=read_length,\n",
-    "#                     seed=seed,\n",
-    "#                     add_noise=add_noise,\n",
-    "#                     error_rate=error_rate,\n",
-    "#                     error_distribution=error_distribution,\n",
-    "#                     max_errors=max_errors,\n",
-    "#                     with_replacement=False,\n",
-    "#                     filters=condition_added_list,\n",
-    "#                     sequences=sequences,\n",
-    "#                     mutation_metadata_df_path=mutation_metadata_df_path,\n",
-    "#                     seq_id_column=seq_id_column,\n",
-    "#                     mut_column=mut_column,\n",
-    "#                     reference_out_dir=reference_out_dir,\n",
-    "#                     out_dir_vk_build=out_dir_vk_build,\n",
-    "#                 )\n",
+    "                simulated_df_dict = vk.sim(\n",
+    "                    mutation_metadata_df = mutation_metadata_df,\n",
+    "                    fastq_output_path = read_fq_path_specific,\n",
+    "                    fastq_parent_path = synthetic_reads_fastQ,\n",
+    "                    read_df_parent=read_df,\n",
+    "                    sample_type=\"all\",\n",
+    "                    number_of_mutations_to_sample=number_of_mutations_to_sample,\n",
+    "                    strand=strand,\n",
+    "                    number_of_reads_per_sample=None,  # not used when number_of_reads_per_sample_m and number_of_reads_per_sample_w are provided\n",
+    "                    number_of_reads_per_sample_m=m,\n",
+    "                    number_of_reads_per_sample_w=w,\n",
+    "                    read_length=read_length,\n",
+    "                    seed=seed,\n",
+    "                    add_noise=add_noise,\n",
+    "                    error_rate=error_rate,\n",
+    "                    error_distribution=error_distribution,\n",
+    "                    max_errors=max_errors,\n",
+    "                    with_replacement=False,\n",
+    "                    filters=condition_added_list,\n",
+    "                    sequences=sequences,\n",
+    "                    mutation_metadata_df_path=mutation_metadata_df_path,\n",
+    "                    seq_id_column=seq_id_column,\n",
+    "                    mut_column=mut_column,\n",
+    "                    reference_out_dir=reference_out_dir,\n",
+    "                    out_dir_vk_build=out_dir_vk_build,\n",
+    "                )\n",
     "\n",
-    "#                 mutation_metadata_df, read_df = simulated_df_dict['mutation_metadata_df'], simulated_df_dict['read_df']\n",
-    "# else:\n",
-    "#     read_df = pd.read_csv(read_df_out)\n",
-    "#     mutation_metadata_df = pd.read_csv(mutation_metadata_df_out)"
+    "                mutation_metadata_df, read_df = simulated_df_dict['mutation_metadata_df'], simulated_df_dict['read_df']\n",
+    "else:\n",
+    "    read_df = pd.read_csv(read_df_out)\n",
+    "    mutation_metadata_df = pd.read_csv(mutation_metadata_df_out)"
    ]
   },
   {
@@ -282,15 +282,15 @@
    "outputs": [],
    "source": [
     "# # do kv sim with random genome\n",
-    "# mutation_metadata_df['start_position_for_which_read_contains_mutation_cdna'] = mutation_metadata_df['start_mutation_position_cdna'] - read_length + 1\n",
+    "mutation_metadata_df['start_position_for_which_read_contains_mutation_cdna'] = mutation_metadata_df['start_mutation_position_cdna'] - read_length + 1\n",
     "# mutation_metadata_df['start_position_for_which_read_contains_mutation_genome'] = mutation_metadata_df['start_mutation_position_genome'] - read_length + 1\n",
     "\n",
-    "# number_of_random_reads_cdna = 10\n",
+    "number_of_random_reads_cdna = 10000\n",
     "# number_of_random_reads_genome = 10\n",
     "\n",
-    "# read_df = build_random_genome_read_df(reference_fasta_file_path = sequences, mutation_metadata_df = mutation_metadata_df, read_df = read_df, n = number_of_random_reads_cdna, read_length = read_length, input_type = \"transcriptome\", strand = strand)\n",
-    "# read_df = build_random_genome_read_df(reference_fasta_file_path = reference_genome_fasta, mutation_metadata_df = mutation_metadata_df, read_df = read_df, n = number_of_random_reads_genome, read_length = read_length, input_type = \"genome\", strand = None)\n",
-    "# read_df.to_csv(read_df_out, index=False)"
+    "read_df = build_random_genome_read_df(reference_fasta_file_path = sequences, mutation_metadata_df = mutation_metadata_df, read_df = read_df, n = number_of_random_reads_cdna, read_length = read_length, input_type = \"transcriptome\", strand = strand)\n",
+    "# read_df = build_random_genome_read_df(reference_fasta_file_path = reference_genome_fasta, mutation_metadata_df = mutation_metadata_df, read_df = read_df, n = number_of_random_reads_genome, read_length = read_length, input_type = \"genome\", strand = strand)\n",
+    "read_df.to_csv(read_df_out, index=False)"
    ]
   },
   {
