--- a/notebooks/2_variant_simulation_complex_fastq.ipynb
+++ b/notebooks/2_variant_simulation_complex_fastq.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,28 +143,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import sys\n",
-    "# import importlib\n",
+    "import sys\n",
+    "import importlib\n",
     "\n",
-    "# # Remove the module from sys.modules\n",
-    "# if 'varseek.sim' in sys.modules:\n",
-    "#     del sys.modules['varseek.sim']\n",
+    "# Remove the module from sys.modules\n",
+    "if 'varseek.sim' in sys.modules:\n",
+    "    del sys.modules['varseek.sim']\n",
     "\n",
-    "# # Import the module and reload it\n",
-    "# import varseek.varseek_sim\n",
-    "# importlib.reload(varseek.varseek_sim)\n",
-    "# import varseek as vk\n",
+    "# Import the module and reload it\n",
+    "import varseek.varseek_sim\n",
+    "importlib.reload(varseek.varseek_sim)\n",
+    "import varseek as vk\n",
     "\n",
-    "# # instead of using vk.sim() as before, I must explicitely use vk.varseek_sim.sim()"
+    "# instead of using vk.sim() as before, I must explicitely use vk.varseek_sim.sim()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,9 +215,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "mutation_metadata_df = \"/home/jrich/data/varseek_data_fresh/vk_build_pipeline_grch37_nov16/mutation_metadata_df_updated_vk_info_exploded.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jrich/Desktop/varseek/varseek/varseek_sim.py:115: DtypeWarning: Columns (11,12,13,26,27,31,53,68,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  mutation_metadata_df = pd.read_csv(mutation_metadata_df)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cannot find mutant sequence read parent\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jrich/Desktop/varseek/varseek/varseek_sim.py:203: DtypeWarning: Columns (12,13,14,25,26,30,52,67,69) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  sim_data_df = pd.read_csv(update_df_out)\n",
+      "17:22:01 - INFO - Initial number of mutations: 5343215\n",
+      "17:22:18 - INFO - Filtered 225116 mutations mutation_type with equal substitution - 5118099 mutations remaining\n",
+      "17:22:24 - INFO - Filtered 161 mutations mutant_sequence_read_parent with isnotnull None - 5117938 mutations remaining\n",
+      "17:22:30 - INFO - Filtered 0 mutations wt_sequence_read_parent with isnotnull None - 5117938 mutations remaining\n",
+      "17:22:43 - INFO - Output fasta file with filtered mutations: None\n",
+      "17:22:43 - INFO - t2g file containing mutated sequences created at None.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 'NoneType' object has no attribute 'composition'\n"
+     ]
+    }
+   ],
    "source": [
     "m_list = [1, 2, 3, 4, 5, 6, 7, 8, 16, 32, 64, 128, 256, 512]\n",
     "w_list = [0, 1, 2, 3, 4, 5, 6, 7, 8, 16, 32, 64, 128, 256, 512]\n",
@@ -233,7 +279,7 @@
     "                read_fq_path_specific = synthetic_reads_fastQ.replace(\".fq\", f\"_m{m}_w{w}_{condition.replace('=', '_')}.fq\")\n",
     "                condition_added_list = [condition, 'included_in_synthetic_reads-isnottrue']\n",
     "                \n",
-    "                simulated_df_dict = vk.sim(\n",
+    "                simulated_df_dict = vk.varseek_sim.sim(\n",
     "                    mutation_metadata_df = mutation_metadata_df,\n",
     "                    fastq_output_path = read_fq_path_specific,\n",
     "                    fastq_parent_path = synthetic_reads_fastQ,\n",
@@ -260,7 +306,8 @@
     "                    out_dir_vk_build=out_dir_vk_build,\n",
     "                )\n",
     "\n",
-    "                mutation_metadata_df, read_df = simulated_df_dict['mutation_metadata_df'], simulated_df_dict['read_df']\n",
+    "                if not simulated_df_dict['mutation_metadata_df'].empty and not simulated_df_dict['read_df'].empty:\n",
+    "                    mutation_metadata_df, read_df = simulated_df_dict['mutation_metadata_df'], simulated_df_dict['read_df']\n",
     "\n",
     "    read_df.to_csv(read_df_out, index=False)\n",
     "    mutation_metadata_df.to_csv(mutation_metadata_df_out, index=False)\n",
