--- a/notebooks/pull_out_reads_for_alignment_viz.ipynb
+++ b/notebooks/pull_out_reads_for_alignment_viz.ipynb
@@ -780,7 +780,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "varseek2",
    "language": "python",
    "name": "python3"
   },
