added tcga scripts

--- a/notebooks/1_1_variant_detection_reference_building.ipynb
+++ b/notebooks/1_1_variant_detection_reference_building.ipynb
@@ -41,7 +41,8 @@
     "\n",
     "# vk build\n",
     "cosmic_version = 100  # COSMIC version for gget cosmic\n",
-    "insertion_size_limit = None\n",
+    "required_insertion_overlap_length = w // 2\n",
+    "min_seq_len = k*1.5\n",
     "# os.environ['COSMIC_EMAIL'] = 'your_email'  # to avoid being prompted for email in varseek build\n",
     "# os.environ['COSMIC_PASSWORD'] = 'your_password'  # to avoid being prompted for password in varseek build\n",
     "\n",
@@ -162,10 +163,10 @@
     "    reference_out=reference_out_dir,\n",
     "    w=w,\n",
     "    k=k,\n",
-    "    insertion_size_limit=insertion_size_limit,\n",
+    "    required_insertion_overlap_length=required_insertion_overlap_length,\n",
     "    remove_seqs_with_wt_kmers=True,\n",
     "    optimize_flanking_regions=True,\n",
-    "    min_seq_len=k,\n",
+    "    min_seq_len=min_seq_len,\n",
     "    max_ambiguous=max_ambiguous_vk,\n",
     "    merge_identical=True,\n",
     "    merge_identical_rc=merge_identical_rc,\n",
