--- a/notebooks/4_5_cancer_typing_with_cell_lines.ipynb
+++ b/notebooks/4_5_cancer_typing_with_cell_lines.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,8 @@
     "    adata_output_path = f\"{kb_count_out_mutation_index_dir}/counts_unfiltered/adata_cleaned.h5ad\"\n",
     "\n",
     "    adata_mutation = sc.read_h5ad(adata_mutation_path)\n",
-    "    adata_mutation.obs_names = [f\"{experiment_accession}_{tissue}\"]\n",
+    "    adata_mutation.obs_names = [f\"{experiment_accession}_{tissue}\"] * adata_mutation.n_obs  #!! the * adata_mutation.n_obs is new as of 12/2/24\n",
+    "\n",
     "\n",
     "    adata_mutation.obs[\"sample_accession\"] = sample_accession\n",
     "    adata_mutation.obs[\"experiment_accession\"] = experiment_accession\n",
