about to change split reads by N with seqtk

--- a/notebooks/1_2_variant_detection_sample_alignment.ipynb
+++ b/notebooks/1_2_variant_detection_sample_alignment.ipynb
@@ -42,8 +42,8 @@
     "# fastq cleanup preceding kb count\n",
     "trim_edges_off_reads = False\n",
     "minimum_base_quality_trim_reads=13\n",
-    "qualified_quality_phred = None\n",
-    "unqualified_percent_limit = None\n",
+    "qualified_quality_phred = 15\n",
+    "unqualified_percent_limit = 50  # unqualified_percent_limit% of bases in a read must have a quality score of at least qualified_quality_phred\n",
     "n_base_limit = None\n",
     "length_required = None\n",
     "\n",
