--- a/notebooks/4_6_entex.ipynb
+++ b/notebooks/4_6_entex.ipynb
@@ -4,6 +4,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['12:34', '56']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mystring = \"12:34:56\"\n",
+    "# return 12:34\n",
+    "mystring.rsplit(\":\", 1)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
