added exploded df argument to vk filter so that notebook 2 is debugged

--- a/notebooks/1_1_variant_detection_reference_building.ipynb
+++ b/notebooks/1_1_variant_detection_reference_building.ipynb
@@ -29,6 +29,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "58*1.25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "verbose=True\n",
@@ -41,8 +61,8 @@
     "\n",
     "# vk build\n",
     "cosmic_version = 100  # COSMIC version for gget cosmic\n",
-    "required_insertion_overlap_length = w // 2\n",
-    "min_seq_len = k*1.5\n",
+    "required_insertion_overlap_length = w // 4\n",
+    "min_seq_len = int(k*1.25)\n",
     "# os.environ['COSMIC_EMAIL'] = 'your_email'  # to avoid being prompted for email in varseek build\n",
     "# os.environ['COSMIC_PASSWORD'] = 'your_password'  # to avoid being prompted for password in varseek build\n",
     "\n",
@@ -123,6 +143,7 @@
     "\n",
     "id_to_header_csv=os.path.join(out_dir_notebook, \"id_to_header_mapping.csv\")\n",
     "mutation_metadata_df_out_path_vk_info = os.path.join(out_dir_notebook, \"mutation_metadata_df_updated_vk_info.csv\")\n",
+    "mutation_metadata_df_exploded_path = os.path.join(out_dir_notebook, \"mutation_metadata_df_updated_vk_info_exploded.csv\") if save_exploded_df else None\n",
     "mutation_index = f\"{out_dir_notebook}/mutation_reference.idx\"\n",
     "dlist_fasta = f\"{out_dir_notebook}/dlist.fa\"\n",
     "wt_mcrs_index = f\"{out_dir_notebook}/wt_mcrs_reference.idx\"\n",
@@ -130,6 +151,7 @@
     "\n",
     "mcrs_fasta_vk_filter = os.path.join(out_dir_notebook, \"mcrs_filtered.fa\")\n",
     "output_metadata_df_vk_filter = os.path.join(out_dir_notebook, \"mutation_metadata_df_filtered.csv\")\n",
+    "output_mutation_metadata_df_exploded_vk_filter = os.path.join(out_dir_notebook, \"mutation_metadata_df_updated_vk_info_exploded_filtered.csv\") if save_exploded_df else None\n",
     "dlist_fasta_vk_filter = os.path.join(out_dir_notebook, \"dlist_filtered.fa\")\n",
     "wt_mcrs_fa_vk_filter = os.path.join(out_dir_notebook, \"mcrs_wt_filtered.fa\")\n",
     "t2g_vk_filter = os.path.join(out_dir_notebook, \"t2g_filtered.txt\")\n",
@@ -241,6 +263,8 @@
    "source": [
     "# %%time\n",
     "vk.filter(mutation_metadata_df_path = mutation_metadata_df_out_path_vk_info,\n",
+    "          mutation_metadata_df_exploded_path = mutation_metadata_df_exploded_path,\n",
+    "          output_mutation_metadata_df_exploded = output_mutation_metadata_df_exploded_vk_filter,\n",
     "          output_mcrs_fasta=mcrs_fasta_vk_filter,\n",
     "          output_metadata_df=output_metadata_df_vk_filter,\n",
     "          dlist_fasta=dlist_fasta,\n",
