--- a/notebooks/1_1_variant_detection_reference_building_t2t.ipynb
+++ b/notebooks/1_1_variant_detection_reference_building_t2t.ipynb
@@ -122,6 +122,7 @@
     "\n",
     "id_to_header_csv=os.path.join(out_dir_notebook, \"id_to_header_mapping.csv\")\n",
     "mutation_metadata_df_out_path_vk_info = os.path.join(out_dir_notebook, \"mutation_metadata_df_updated_vk_info.csv\")\n",
+    "mutation_metadata_df_exploded_path = os.path.join(out_dir_notebook, \"mutation_metadata_df_updated_vk_info_exploded.csv\") if save_exploded_df else None\n",
     "mutation_index = f\"{out_dir_notebook}/mutation_reference.idx\"\n",
     "dlist_fasta = f\"{out_dir_notebook}/dlist.fa\"\n",
     "wt_mcrs_index = f\"{out_dir_notebook}/wt_mcrs_reference.idx\"\n",
@@ -129,6 +130,7 @@
     "\n",
     "mcrs_fasta_vk_filter = os.path.join(out_dir_notebook, \"mcrs_filtered.fa\")\n",
     "output_metadata_df_vk_filter = os.path.join(out_dir_notebook, \"mutation_metadata_df_filtered.csv\")\n",
+    "output_mutation_metadata_df_exploded_vk_filter = os.path.join(out_dir_notebook, \"mutation_metadata_df_updated_vk_info_exploded_filtered.csv\") if save_exploded_df else None\n",
     "dlist_fasta_vk_filter = os.path.join(out_dir_notebook, \"dlist_filtered.fa\")\n",
     "wt_mcrs_fa_vk_filter = os.path.join(out_dir_notebook, \"mcrs_wt_filtered.fa\")\n",
     "t2g_vk_filter = os.path.join(out_dir_notebook, \"t2g_filtered.txt\")\n",
@@ -240,6 +242,8 @@
    "source": [
     "# %%time\n",
     "vk.filter(mutation_metadata_df_path = mutation_metadata_df_out_path_vk_info,\n",
+    "          mutation_metadata_df_exploded_path = mutation_metadata_df_exploded_path,\n",
+    "          output_mutation_metadata_df_exploded = output_mutation_metadata_df_exploded_vk_filter,\n",
     "          output_mcrs_fasta=mcrs_fasta_vk_filter,\n",
     "          output_metadata_df=output_metadata_df_vk_filter,\n",
     "          dlist_fasta=dlist_fasta,\n",
