--- a/notebooks/4_5_cancer_typing_with_cell_lines.ipynb
+++ b/notebooks/4_5_cancer_typing_with_cell_lines.ipynb
@@ -483,6 +483,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simulate values of ARI to calculate p-value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!!! NEW\n",
+    "\n",
+    "# Extract true labels and predicted labels\n",
+    "true_labels = adata.obs['tissue']\n",
+    "predicted_labels = adata.obs['leiden']\n",
+    "observed_ari = adjusted_rand_score(true_labels, predicted_labels)\n",
+    "\n",
+    "# Generate a null distribution of ARIs\n",
+    "n_permutations = 1000  # Number of permutations\n",
+    "null_ari = []\n",
+    "\n",
+    "for _ in range(n_permutations):\n",
+    "    # Randomly permute the 'leiden' labels\n",
+    "    permuted_labels = np.random.permutation(predicted_labels)\n",
+    "    # Compute the ARI for the permuted labels\n",
+    "    null_ari.append(adjusted_rand_score(true_labels, permuted_labels))\n",
+    "\n",
+    "# Convert to a numpy array for easier manipulation\n",
+    "null_ari = np.array(null_ari)\n",
+    "\n",
+    "# Calculate the p-value\n",
+    "p_value = (null_ari >= observed_ari).sum() / n_permutations\n",
+    "\n",
+    "# Display results\n",
+    "print(f\"Observed ARI: {observed_ari}\")\n",
+    "print(f\"Mean of null ARI: {np.mean(null_ari)}\")\n",
+    "print(f\"P-value: {p_value}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
